fixed sum alignment

--- a/source/components/moneys/moneys.module.scss
+++ b/source/components/moneys/moneys.module.scss
@@ -12,6 +12,7 @@
 .text {
   text-align: right;
   margin-bottom: 40px;
+  margin-left: auto;
   user-select: none;
 
   h1 {
